# cs4575-project1

./: .gitignore  README.md  pyproject.toml
cs4575_project1/: energi_custom.py  g2_ml_libraries.md  main.py  pyenergibridge_config.json  utils.py
cs4575_project1/analysis/: results_extraction.py  results_visualisation.py  test.py  violin_plot.py
cs4575_project1/implementations/: constants.py  jax_jit_imp.py  jaxx_imp.py  keras_imp.py  pytorch_imp.py  tensorflow_imp.py
cs4575_project1/results/: keras_results.csv
cs4575_project1/results/dummy/: results_1.csv  results_2.csv
cs4575_project1/results/jaxx/: jaxx_0.csv  jaxx_1.csv  jaxx_10.csv  jaxx_11.csv  jaxx_12.csv  jaxx_13.csv  jaxx_14.csv  jaxx_15.csv  jaxx_16.csv  jaxx_17.csv  jaxx_18.csv  jaxx_19.csv  jaxx_2.csv  jaxx_20.csv  jaxx_21.csv  jaxx_22.csv  jaxx_23.csv  jaxx_24.csv  jaxx_25.csv  jaxx_26.csv  jaxx_27.csv  jaxx_28.csv  jaxx_29.csv  jaxx_3.csv  jaxx_30.csv  jaxx_31.csv  jaxx_32.csv  jaxx_33.csv  jaxx_34.csv  jaxx_35.csv  jaxx_37.csv  jaxx_38.csv  jaxx_39.csv  jaxx_4.csv  jaxx_40.csv  jaxx_41.csv  jaxx_5.csv  jaxx_6.csv  jaxx_7.csv  jaxx_8.csv  (+1 more)
cs4575_project1/results/keras/: keras_0.csv  keras_1.csv  keras_10.csv  keras_11.csv  keras_12.csv  keras_13.csv  keras_14.csv  keras_15.csv  keras_16.csv  keras_17.csv  keras_18.csv  keras_19.csv  keras_2.csv  keras_20.csv  keras_21.csv  keras_22.csv  keras_23.csv  keras_24.csv  keras_25.csv  keras_26.csv  keras_27.csv  keras_28.csv  keras_29.csv  keras_3.csv  keras_30.csv  keras_31.csv  keras_32.csv  keras_34.csv  keras_35.csv  keras_36.csv  keras_37.csv  keras_38.csv  keras_39.csv  keras_4.csv  keras_41.csv  keras_5.csv  keras_6.csv  keras_7.csv  keras_8.csv  keras_9.csv
cs4575_project1/results/torch/: torch_0.csv  torch_1.csv  torch_10.csv  torch_11.csv  torch_12.csv  torch_13.csv  torch_14.csv  torch_15.csv  torch_16.csv  torch_17.csv  (+31 more)
tests/: h2.py  test.py
(+338 files in other folders)
