[tool.poetry]
name = "cs4575-project1"
version = "0.1.0"
description = ""
authors = ["Reinier <reinier7175@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
#pyenergibridge = {git = "https://github.com/luiscruz/pyEnergiBridge.git"}
keyboard = "^0.13.5"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.6.0"
torchvision = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
