[tool.poetry]
name = "cs4575-project1"
version = "0.1.0"
description = ""
authors = ["Reinier <reinier7175@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
#pyenergibridge = {git = "https://github.com/luiscruz/pyEnergiBridge.git"}
keyboard = "^0.13.5"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"
tensorflow-intel = {version="^2.15.0", platform = "win32"}
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
