[tool.poetry]
name = "cs4575-project1"
version = "0.1.0"
description = ""
authors = ["Reinier <reinier7175@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
#pyenergibridge = {git = "https://github.com/luiscruz/pyEnergiBridge.git"}
keyboard = "^0.13.5"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
colorama = "^0.4.6"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.18.0"
tensorflow-intel = {version = "2.18.0", platform = "win32"}
jax = "^0.5.0"
optax = "^0.2.4"
flax = "^0.10.3"
tensorflow-datasets = "^4.9.7"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
